--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,15 @@
     <color name="azul_">#01c7d3</color>
     <color name="azul_escuro">#00b2bc</color>
     <color name="roza">#ff706a</color>
+
+    <!--Cores despesas! -->
+    <color name="colorPrimaryDespesa">#FF706A</color>
+    <color name="colorPrimaryDarkDespesa">#E66560</color>
+    <color name="colorAccentDespesa">#FF706A</color>
+
+
+    <!-- Cores Receitas -->
+    <color name="colorPrimaryReceitas">#00D39E</color>
+    <color name="colorPrimaryDarkReceitas">#00BE8B</color>
+    <color name="colorAccentReceitas">#00D39E</color>
 </resources>
